# lib_common

./: .bazelrc  .gitignore  .pre-commit-config.yaml  BUILD.bazel  MODULE.bazel  README.md  WORKSPACE  defs.bzl  defs_test.bzl  dev.html  dev.md  docs.md  index.html  release.sh
.github/workflows/: ci.bazelrc  docs.yaml  release.yaml  release.yml  release_prep.sh  test.yaml
